# scrim-match

./: .gitignore  Cargo.toml  README.md  fly.toml
.github/workflows/: deploy.yml
backend/: Cargo.toml  Dockerfile
backend/src/: db.rs  main.rs
cli/: Cargo.toml
cli/src/: main.rs
frontend/: Cargo.toml  index.html
frontend/assets/: main.css
frontend/src/: main.rs  net.rs  state.rs
frontend/src/views/: calendar.rs  login.rs  matching.rs  messages.rs  mod.rs  nav.rs  team.rs
shared/: Cargo.toml
shared/src/: lib.rs  seed.rs
