[package]
name = "frontend"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
shared = { path = "../shared" }
dioxus = { version = "0.6", features = ["web"] }
serde = { workspace = true }
serde_json = { workspace = true }
gloo-net = { version = "0.6", features = ["http", "websocket"] }
futures = "0.3"
futures-util = "0.3"
wasm-bindgen-futures = "0.4"
